--- a/public/profile.html
+++ b/public/profile.html
@@ -69,34 +69,40 @@
 <body>
 
 <header>
-    <h1>Company Name</h1>
+    <h1>Toko Berkat Berdendang Ria</h1>
 </header>
 
 <div class="container">
     <div class="profile-header">
         <div>
             <h2>About Us</h2>
-            <p>Short description of the company, mission statement, or slogan.</p>
+            <p>Toko Berkat Berdendang Ria adalah toko musik yang berlokasi di Malang, Jawa Timur. 
+                Kami menyediakan berbagai macam alat musik, aksesoris musik, dan jasa perbaikan alat musik.
+                 Kami berkomitmen untuk menyediakan produk dan layanan berkualitas tinggi dengan harga yang terjangkau.</p>
         </div>
-        <img src="https://via.placeholder.com/150" alt="Company Logo">
+        <img src="assets/img/bbr.png" alt="Company Logo">
     </div>
 
     <div class="profile-details">
         <h3>Company Overview</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac libero at tortor congue vestibulum. Curabitur consequat auctor urna, sit amet dignissim metus bibendum non. Integer vitae mi a erat volutpat gravida. Donec sed nulla ut purus convallis pharetra.</p>
+        <p>Toko Musik Berkat Berdendang Ria didirikan pada tahun 2024 oleh Rizky Iman dan Firmansyah. Kami memiliki tim yang berpengalaman dan bersemangat dalam bidang musik. Kami selalu berusaha untuk memberikan pelayanan terbaik kepada pelanggan kami.</p>
 
         <h3>Our Services</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse efficitur nec eros nec vestibulum. Aenean aliquam urna id mi posuere, sed elementum lacus dapibus. Ut sed dignissim orci. In hac habitasse platea dictumst. Duis nec cursus turpis.</p>
+        Toko Musik Berkat Berdendang Ria menyediakan berbagai macam layanan, antara lain:<br>
+        <ul>
+            <li>Penjualan alat musik: Kami menyediakan berbagai macam alat musik, seperti gitar, piano, drum, keyboard, dan biola. Kami juga menyediakan aksesoris musik, seperti senar gitar, pick gitar, drum stick, dan sheet music.</li>
+            <li>Perbaikan alat musik: Kami menyediakan jasa perbaikan alat musik untuk semua jenis alat musik. Teknisi kami berpengalaman dan profesional dalam menangani berbagai macam kerusakan pada alat musik.</li>
+        </ul>
 
         <h3>Contact Information</h3>
         <p>Email: info@company.com</p>
-        <p>Phone: +123 456 7890</p>
-        <p>Address: 123 Street Name, City, Country</p>
+        <p>Phone: +6282141652080</p>
+        <p>Address: Jl. Abdul Qodir Jaelani no.10 RT.04 RW. 07 Kecamatan Kedungkandang, Kota Malang, Jawa Timur</p>
     </div>
 </div>
 
 <footer>
-    <p>&copy; 2024 Company Name. All rights reserved.</p>
+    <p>&copy; 2024 Berkat Berdendang Ria. All rights reserved.</p>
 </footer>
 
 </body>
