--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
                 <h4 class="text-800">Berkat Berdendang Ria</h4>
                 <h1 class="fw-semi-bold lh-sm fs-4 fs-lg-5 fs-xl-6">Our Story</h1>
                 <p class="mb-5 fs-1">Membuka toko alat musik yang menarik bukan hanya tentang memiliki berbagai instrumen. Ini tentang menciptakan pengalaman yang menyenangkan dan menginspirasi bagi para musisi, baik pemula maupun profesional. Berkat Berdendang Ria Menawarkan berbagai alat musik dengan kualitas terbaik dengan harga yang terjangkau.</p>
-                <div class="d-grid gap-2 d-md-block"><a class="btn btn-lg btn-dark" href="profile.html" role="button">Explore</a></div>
+                <div class="d-grid gap-2 d-md-block"><a class="btn btn-lg btn-dark" target="_blank" href="profile.html" role="button">Explore</a></div>
               </div>
             </div>
             <div class="col-md-6">
