--- a/public/profile.html
+++ b/public/profile.html
@@ -95,8 +95,8 @@
         </ul>
 
         <h3>Contact Information</h3>
-        <p>Email: info@company.com</p>
-        <p>Phone: +6282141652080</p>
+        <p>Email: bberdendangria@gmail.com</p>
+        <p>Phone: +62 821 4165 2080</p>
         <p>Address: Jl. Abdul Qodir Jaelani no.10 RT.04 RW. 07 Kecamatan Kedungkandang, Kota Malang, Jawa Timur</p>
     </div>
 </div>
