--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Technopreneurship</title>
+    <title>Berkat Berdendang Ria</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/bbr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/bbr.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/bbr.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/bbr.png">
     <link rel="manifest" href="assets/img/favicons/manifest.json">
     <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
@@ -430,11 +430,11 @@
             <div class="col-sm-6 col-lg-auto ms-auto">
               <div class="row input-group-icon mb-5">
                 </div>
-              <p class="text-800">
+              <!-- <p class="text-800">
                 <svg class="feather feather-phone me-3" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
                 </svg><span class="text-800">+62 821 4165 2080</span>
-              </p>
+              </p> -->
               <p class="text-800">
                 <svg class="feather feather-mail me-3" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
@@ -458,6 +458,13 @@
               setInterval(updateTime, 1000);
               updateTime(); // Initial call to set time immediately
           </script>
+          <script src="https://unpkg.com/whatsapp-button?module" type="module"></script>
+          <p class="text-800">
+            <whatsapp-button phone="082141652080" dialcode="62" text="hey there lets chat!" label="Start Chat"></whatsapp-button>
+          </p>
+          
+          <!-- <a aria-label="Chat on WhatsApp" href="https://wa.me/082141652080"><img alt="Chat on WhatsApp" src="assets/img/whatsapp-button-300x104.png"  height="50" width="160"/>
+          </a> -->
             </div>
           </div>
           <div class="border-bottom border-3"></div>
